WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286091
REGRESSION (
286183@main
): [iOS] Safari summarization is missing pondering animation
https://bugs.webkit.org/show_bug.cgi?id=286091
Summary
REGRESSION (286183@main): [iOS] Safari summarization is missing pondering ani...
Aditya Keerthi
Reported
2025-01-16 13:47:54 PST
rdar://142447426
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2025-01-16 15:54:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39157
EWS
Comment 2
2025-01-17 09:49:28 PST
Committed
289068@main
(0e9ce0f18a23): <
https://commits.webkit.org/289068@main
> Reviewed commits have been landed. Closing PR #39157 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug