REGRESSION (286183@main): [iOS] Safari summarization is missing pondering animation https://bugs.webkit.org/show_bug.cgi?id=286091 rdar://142447426

Reviewed by Richard Robinson and Abrar Rahman Protyasha.

286183@main incorrectly modified `-[WKWebView _targetedPreviewForElementWithID:completionHandler:]`
which is unrelated to proofreading, and used only by Safari. The `WKWebView`
should be the preview container, not the `WKScrollView`. Using the incorrect
container results in the targeted preview being misplaced.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _targetedPreviewForElementWithID:completionHandler:]):
* Tools/TestWebKitAPI/SourcesCocoa.txt:
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/ElementTextPreview.mm: Added.
(TestWebKitAPI::TEST(ElementTextPreview, PreviewForElement)):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/FindInPageAPI.mm:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/ImageAnalysisTests.mm:

Canonical link: https://commits.webkit.org/289068@main